--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>RangaStore</title>
   <link rel="stylesheet" href="css/style.css" />
+
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
   <!-- google Montserrat  font  -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -21,25 +22,21 @@
 
 <body>
   <header>
-    <h2>Welcome to Alpona Store</h2>
+    <h1 class="text-center pt-5 pb-3 fw-bold text-primary">Welcome to Alpona Store</h1>
   </header>
 
-  <main class="main">
+  <main>
 
-    <div class="search-field">
-
-      <div class="search-box">
-        <input id="input-field" class="search-field" type="text" />
-        <button type="button" class="btn btn-primary search-button" data-toggle="button" aria-pressed="false"
-          autocomplete="off" id="search-btn" onclick="loadProducts()">
-          Search
-        </button>
-      </div>
+    <div class="input-group my-3 mx-auto w-50">
+      <input id="input-field" type="text" class="form-control" placeholder="search your Product"
+        aria-label="search your Product" aria-describedby="button-addon2">
+      <button class=" btn btn-outline-primary" type="button" id="">Search</button>
     </div>
 
 
-    <div class="row">
-      <div class="col-md-9 col-lg-9 col-sm-7">
+
+    <div class="row py-5">
+      <div class="col-md-9 col-lg-9 col-sm-7 px-5 ">
         <div id="all-products" class="">
 
         </div>
@@ -90,16 +87,21 @@
             </tbody>
           </table>
           <div class="parces text-center">
-            <button class="btn btn-primary text-center">Buy Now</button>
+            <button class="btn btn-warning text-center">Buy Now</button>
           </div>
         </div>
       </div>
     </div>
   </main>
-  <footer></footer>
+  <footer>
+
+  </footer>
 
   <!-- add javascript  file  -->
   <script src="js/app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
