--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- ---------title-------- -->
   <title>AlponaStore</title>
+
+  <!-- .......css style ....... -->
   <link rel="stylesheet" href="css/style.css" />
 
   <!-- Latest compiled and minified CSS -->
@@ -18,30 +21,27 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
 </head>
 
-
-
 <body>
   <header>
     <h1 class="text-center pt-5 pb-3 fw-bold text-primary">Welcome to Alpona Store</h1>
   </header>
 
   <main>
-
+    <!-- -------SearchButton----------- -->
     <div class="input-group my-3 mx-auto w-50">
       <input id="input-field" type="text" class="form-control" placeholder="search your Product"
         aria-label="search your Product" aria-describedby="button-addon2">
       <button class=" btn btn-outline-primary" type="button" id="">Search</button>
     </div>
 
-
-
     <div class="row py-5">
+      <!-- ----------All Products --------- -->
       <div class="col-md-9 col-lg-9 col-sm-7 px-5 ">
         <div id="all-products" class="">
 
         </div>
       </div>
-
+      <!-- --------------My Cart Table ---------- -->
       <div class="col-md-3 col-lg-3 col-sm-5 cart-main">
         <div class="cart" id="my-cart">
           <table class="table">
@@ -93,12 +93,14 @@
       </div>
     </div>
   </main>
+
   <footer>
 
   </footer>
 
   <!-- add javascript  file  -->
   <script src="js/app.js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
     crossorigin="anonymous"></script>
